--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,3 +1,9 @@
 .clear {
    background: none;
 }
+
+.outline {
+   padding: 10px 15px;
+   border: 1px solid var(--secondary-color);
+   color: var(--inverted-primary-color);
+}
