upgrade sidebar, add visual tool

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,8 +1,8 @@
 .app.dark {
    --bg-color: #00006b;
    --inverted-bg-color: #eaeaf1;
-   --primary-color: #35bf03;
-   --secondary-color: #63fc2b;
+   --primary-color: #63fc2b;
+   --secondary-color: #35bf03;
    --inverted-primary-color: #10028e;
    --inverted-secondary-color: #0015f9;
 }
