--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,5 +1,16 @@
-.clear {
+.Button {
+   padding: 6px 13px;
+}
+
+.clear,
+.clearInverted {
+   padding: 0;
    background: none;
+   color: var(--primary-color);
+}
+
+.clearInverted {
+   color: var(--inverted-primary-color);
 }
 
 .outline {
@@ -7,3 +18,45 @@
    border: 1px solid var(--secondary-color);
    color: var(--inverted-primary-color);
 }
+
+.background {
+   background-color: var(--bg-color);
+   color: var(--primary-color);
+}
+
+.backgroundInverted {
+   background-color: var(--inverted-bg-color);
+   color: var(--inverted-primary-color);
+}
+
+.square {
+   padding: 0;
+}
+
+.square.size_m {
+   width: var(--font-line-m);
+   height: var(--font-line-m);
+}
+
+.square.size_l {
+   width: var(--font-line-l);
+   height: var(--font-line-l);
+}
+
+.square.size_xl {
+   width: var(--font-line-xl);
+   height: var(--font-line-xl);
+}
+
+.size_m {
+   font: var(--font-m);
+}
+
+.size_l {
+   font: var(--font-l);
+}
+
+.size_xl {
+   font: var(--font-xl);
+}
+
