--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -3,8 +3,11 @@
 @import "./themes/dark";
 @import "./themes/normal";
 
-.app {
+body {
    font: var(--font-m);
+}
+
+.app {
    background-color: var(--bg-color);
    color: var(--primary-color);
    height: 100vh;
