--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -15,8 +15,9 @@
 
 .outline {
    padding: 10px 15px;
-   border: 1px solid var(--secondary-color);
-   color: var(--inverted-primary-color);
+   border: 1px solid var(--inverted-secondary-color);
+   color: var(--primary-color);
+   background-color: var(--bg-color);
 }
 
 .background {
