add login module

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -19,6 +19,8 @@
    // colors
    --overlay-color: #0009;
    --white-color: #fff;
+   --red-light-color: #f11;
+   --red-dark-color: #d20101;
 
    // z-indexes
    --modal-z-index-close: 0;
