--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -15,7 +15,7 @@
 
 .outline {
    padding: 10px 15px;
-   border: 1px solid var(--inverted-secondary-color);
+   border: 1px solid var(--primary-color);
    color: var(--primary-color);
    background-color: var(--bg-color);
 }
@@ -59,4 +59,8 @@
 
 .size_xl {
    font: var(--font-xl);
+}
+
+.disabled {
+   opacity: 0.5;
 }
