--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -20,7 +20,7 @@
 }
 
 .content {
-   padding: 40px 20px;
+   padding: 20px;
    border-radius: 10px;
    max-width: 50%;
    transform: scale(0.5);
