--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -19,6 +19,7 @@
    // colors
    --overlay-color: #0009;
    --white-color: #fff;
+   --dark-color: #000;
    --red-light-color: #f11;
    --red-dark-color: #d20101;
 
