--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -4,4 +4,14 @@
    height: 30px;
    font: var(--font-m);
    padding: 0 15px;
+   color: var(--primary-color);
+}
+
+.primary {
+   background-color: var(--white-color);
+   color: var(--dark-color);
+}
+
+.clear {
+   background-color: inherit;
 }
